# vibe_rust_coder

./: .gitignore  AI_WORKFLOW.md  ARCHITECTURE.md  Cargo.toml  EXAMPLES.md  LICENSE  NEW_FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  build.bat
src/: app.rs  command.rs  main.rs  parser.rs  project.rs
