[package]
name = "vibe_rust_coder"
version = "0.1.0"
edition = "2021"

[dependencies]
# Rust parsing
syn = { version = "2.0", features = ["full", "parsing", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

# File system operations
walkdir = "2.4"
ignore = "0.4"

# GUI
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"

# Command execution
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = "0.4"
